--- a/index.scss
+++ b/index.scss
@@ -1,19 +1,19 @@
-@import "./assets/helpers/variables";
-@import "./assets/helpers/mixin";
+@import "../assets/helpers/variables";
+@import "../assets/helpers/mixin";
 
 
-@import "./assets/components/base";
-@import "./assets/components/classes";
-@import "./assets/components/database";
+@import "../assets/components/base";
+@import "../assets/components/classes";
+@import "../assets/components/database";
 
 
 
-@import "./assets/components/header";
-@import "./assets/components/hero";
-@import "./assets/components/episodes";
+@import "../assets/components/header";
+@import "../assets/components/hero";
+@import "../assets/components/episodes";
 
-@import "./assets/components/footer";
-@import "./assets/components/card";
+@import "../assets/components/footer";
+@import "../assets/components/card";
 
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Oswald&family=Playfair+Display:wght@700&family=Poppins:ital@0;1&family=Raleway:ital,wght@0,100;0,400;1,400&family=Roboto:ital,wght@0,400;1,300&family=Vollkorn:ital@1&display=swap');
 
